--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name = "viewport" content = "with = device-width, initial-scale = 1.0"
-      <title>Website is still in the making</title>
+    <meta name = "viewport" content = "with = device-width, initial-scale = 1.0">
+    <title>Website is still in the making</title>
+    <link rel ="stylesheet" href=".css">
+    
 </head>
+<body>
+    <section class = "header">
+
+    </section>
+</body>
 </html>
