--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 </head>
 <body>
     <section class = "header">
-
+        <nav>
+            <div class = "nav-links">
+                <ul>
+                    <li><a href = ""> HOME </a></li>
+                    <li><a href = ""> HOME </a></li>
+                    <li><a href = ""> HOME </a></li>
+                    <li><a href = ""> HOME </a></li>
+                    <li><a href = ""> HOME </a></li>
+                </ul>
+            </div>
+        </nav>
     </section>
 </body>
 </html>
