--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name = "viewport" content = "with = device-width, initial-scale = 1.0">
+    <meta name="viewport" content="with = device-width, initial-scale=1.0">
     <title>Website is still in the making</title>
-    <link rel ="stylesheet" href=".css">
+    <link rel="stylesheet" href="style.css">
     
 </head>
 <body>
-    <section class = "header">
+    <section class="header">
         <nav>
-            <div class = "nav-links">
+            <div class="nav-links">
                 <ul>
-                    <li><a href = ""> HOME </a></li>
-                    <li><a href = ""> HOME </a></li>
-                    <li><a href = ""> HOME </a></li>
-                    <li><a href = ""> HOME </a></li>
-                    <li><a href = ""> HOME </a></li>
+                    <li><a href=""> HOME </a></li>
+                    <li><a href=""> HOME </a></li>
+                    <li><a href=""> HOME </a></li>
+                    <li><a href=""> HOME </a></li>
+                    <li><a href=""> HOME </a></li>
                 </ul>
             </div>
         </nav>
