--- a/talks.html
+++ b/talks.html
@@ -6,10 +6,12 @@
 	</head>
 	<body>
 		<div class="headingtalks">
-			<h4 class="headingtalks1">My Talks</h4>
-			<p class="headingtalks2">
-				All the talks that I´ve already held and the talks that I am currently preparing can be found below.
-			</p>
+			<div class="headingtalks6">
+				<h4>My Talks</h4>
+					<p>
+					All the talks that I´ve already held and the talks that I am currently preparing can be found below.
+					</p>
+			</div>
 		</div>
 		<div class = "headingtalks3">
 			<p>
