--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta name="viewport" content="with = device-width, initial-scale=1.0">
-        <title><particlephysics class="eu"></particlephysics></title>
         <link rel="stylesheet" href="style.css">
+        <title>particlephysics.eu</title>
     </head>
 
     <body>
