--- a/pictures.html
+++ b/pictures.html
@@ -112,11 +112,11 @@
 
 				<input type ="checkbox" id="img13">
 				<label for ="img13" class="thumb">
-					<img src="_Bild13.jpg" alt="Bild 13">
+					<img src="Bild13.jpg" alt="Bild 13">
 				</label>
 				<div class="lightbox">
 					<label for = "img13" class="lightbox-background"></label>
-					<img src="_Bild13.jpg" alt="Bild 13 groß">
+					<img src="Bild13.jpg" alt="Bild 13 groß">
 				</div>
 
 				<input type ="checkbox" id="img14">
