--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <a href = "hagoromo.html" class = "nav-link"> Hagoromo</a>
                     </li>
                     <li class = "nav-item">
-                        <a href = "pictures.html" class = "nav-link"> Pictures</a>
+                        <a href = "pictures2.html" class = "nav-link"> Pictures</a>
                     </li>
                     <li class = "nav-item">
                         <a href = "#contact" class = "nav-link"> Contact</a>
