--- a/index.html
+++ b/index.html
@@ -1,126 +1,153 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="with = device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-        <title>particlephysics.eu</title>
-    </head>
 
-    <body>
-        <header>
-            <nav class = "navbar">
-                <ul class = "nav-menu">
-                    <li class = "nav-item">
-                        <a href = "#" class = "nav-link"> Home</a>
-                    </li>
-                    <li class = "nav-item">
-                        <a href = "talks.html" class = "nav-link"> Talks</a>
-                    </li>
-                    <li class = "nav-item">
-                        <a href = "projects.html" class = "nav-link"> Projects</a>
-                    </li>
-                    <li class = "nav-item">
-                        <a href = "hagoromo.html" class = "nav-link"> Hagoromo</a>
-                    </li>
-                    <li class = "nav-item">
-                        <a href = "pictures2.html" class = "nav-link"> Pictures</a>
-                    </li>
-                    <li class = "nav-item">
-                        <a href = "#contact" class = "nav-link"> Contact</a>
+<head>
+    <meta name="viewport" content="with = device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>particlephysics.eu</title>
+</head>
+
+<body>
+    <header>
+        <nav class="navbar">
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="#" class="nav-link"> Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="talks.html" class="nav-link"> Talks</a>
+                </li>
+                <li class="nav-item">
+                    <a href="projects.html" class="nav-link"> Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a href="hagoromo.html" class="nav-link"> Hagoromo</a>
+                </li>
+                <li class="nav-item">
+                    <a href="pictures2.html" class="nav-link"> Pictures</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#contact" class="nav-link"> Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+
+        <section class="hero-section">
+            <div class="hero-image">
+                <div class="hero-details">
+                    <h2 class="title">ALL ABOUT PARTICLE PHYSICS</h2>
+                    <h3 class="subtitle">the life of a physics and mathematics student, learning about the secrets of
+                        the cosmos </h3>
+                </div>
+            </div>
+        </section>
+        <section class="main-info">
+            <div class="introduction">
+                <h4 class="subtitle2">Hi there!</h4>
+                <br>
+                <!-- <br> -->
+                <img src="profile.pic.überar-1.jpeg" class="profile-pic">
+                <p>I am Rosa Posch, a physics and mathematics student at TU Graz with a strong interest in particle
+                    physics and mathematical physics. My goal is to one day work in one of these fields and contribute
+                    to a deeper understanding of how everything works.</p>
+
+                <p>This blog is where I share my projects, ideas and thoughts along the way. It is a space for
+                    learning, reflecting, and connecting with others who are curious about science and its many
+                    possibilities.</p>
+
+                <p>Whether you're a fellow student, researcher, or just interested in physics, I hope you find
+                    something here that resonates. </p>
+                <!-- <br> -->
+                <p>I tend to experience childlike excitement whenever I do physics or math and it is my deepest wish to
+                    spread this feeling around the world. I also long to lead by example that </p>
+                <!-- <br>  -->
+                <p class="citation">
+                    "making mistakes is just a important component of the creative process and we have to teach younger
+                    people how to accept that."
+                    <!-- <br> -->
+                    -Hugo Dominil Copin
+                </p>
+                <!-- <br>  -->
+                <p>So, if you find any wrong arguments in my work or have ideas how to improve certain components of it,
+                    I would be happy if you contacted me.
+                    If that might not be the case and you just want to talk about science, feel free to do that too!
+                </p>
+                <!-- <br> -->
+            </div>
+        </section>
+        <section class="CCC-Hamburg">
+            <p class="break">
+
+            </p>
+            <!-- <br> -->
+            <h4 class="subtitle3">What is the vacuum made of?</h4>
+            <!-- <br> -->
+            <!-- <p class = cool-1> -->
+            <p>A way to define the vacuum is achived by looking at it like Dirac did. He introduced the "Dirac sea",
+                which explains the phenomenon of antimatter.
+                In this model, all the negative-energy states of electrons are considered to be filled in a "sea" —
+                and when one of these states is empty (a "hole"), it behaves like a particle with positive charge: a
+                positron (the electron's antiparticle).
+                It's an early idea from quantum field theory — not used in modern QFT calculations anymore, but
+                still a very cool and historically important concept.</p>
+            <!-- <br> -->
+            <!-- <br> -->
+            <p>So, according to the idea of the Dirac sea, the vacuum isn't truly empty — it's filled with
+                negative-energy states occupied by electrons. If enough energy is pumped into the vacuum, especially
+                beyond a certain critical field strength known as the Schwinger limit, something interesting
+                happens:
+                The energy is high enough to "pull" an electron out of this sea, leaving behind a hole — which we
+                observe as a positron. This is how electron-positron pairs can be created from the vacuum.</p>
+
+            <p>If you continue to increase the energy density beyond that, eventually it becomes possible to create
+                even heavier particle-antiparticle pairs — like myons, tau particles, or even hadrons — depending on
+                how
+                much energy you inject.
+                In this view, the vacuum behaves like a medium full of potential particles, and extreme energy can
+                lift
+                them out, making them real, observable particles.</p>
+            <!-- <br> -->
+            <!-- <br> -->
+            <p>I talked about this and other phenomenons at the 38C3 in Hamburg. If you want to know more about it,
+                you
+                can watch the video below:</p>
+            <!-- </p> -->
+            </div>
+            <div class="video-container">
+                <iframe src=https://www.youtube.com/embed/KEXabgqsrZc title="Introduction to particle physics"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
+                </iframe>
+            </div>
+            <div>
+                <p class="cool-2">
+                    <!-- <br> -->
+                    When I held this talk in Hamburg, I was only beginning to grasp the beauty of this theory. Since
+                    then I've been working on lecture notes that also explain the mathematical concepts behind those
+                    ideas. I'll upload the notes as soon as I'm done. Stay tuned!
+                </p>
+                <!-- <br> -->
+            </div>
+        </section>
+        <section class="Contact" , id="contact">
+            <h4 class="contact-title">Contact me</h4>
+            <div>
+                <ul class="contact-info-list">
+                    <li class="contact-info">
+                        <i class="fa-regular fa-envelope"></i>
+                        <p>rosa.adamerr@icloud.com</p>
+                        <!-- <br> -->
                     </li>
                 </ul>
-            </nav>
-        </header>
+            </div>
+            </div>
+        </section>
 
-        <main>
+    </main>
 
-            <section class = "hero-section">
-                <div class = "hero-image">
-                    <div class = "hero-details">
-                        <h2 class = "title">ALL ABOUT PARTICLE PHYSICS</h2>
-                        <h3 class ="subtitle">the life of a physics and mathematics student, learning about the secrets of the cosmos </h3>
-                    </div>
-                </div>
-            </section>
-            <section class = "main-info">
-                <div class="introduction">
-                    <h4 class ="subtitle2">Hi there!</h4>
-                    <br>
-                    <img src="self.jpg" class="profile-pic">
-                    <p>I am Rosa Posch, a physics and mathematics student at TU Graz with a strong interest in particle physics and mathematical physics. My goal is to one day work in one of these fields and contribute to a deeper understanding of how everything works.
+</body>
 
-                        This blog is where I share my projects, ideas and thoughts along the way. It is a space for learning, reflecting, and connecting with others who are curious about science and its many possibilities.
-                        
-                        Whether you're a fellow student, researcher, or just interested in physics, I hope you find something here that resonates. </p>
-                    <br>
-                    <p>I tend to experience childlike excitement whenever I do physics or math and it is my deepest wish to spread this feeling around the world. I also long to lead by example that </p>
-                    <br> 
-                    <p class="citation">
-                     "making mistakes is just a important component of the creative process and we have to teach younger people how to accept that." 
-                    <br>
-                    -Hugo Dominil Copin
-                    </p>
-                    <br> 
-                    <p>So, if you find any wrong arguments in my work or have ideas how to improve certain components of it, I would be happy if you contacted me.
-                        If that might not be the case and you just want to talk about science, feel free to do that too! </p>
-                    <br>
-                </div>
-            </section>
-            <section class = "CCC-Hamburg">
-                <div class="talk">
-                    <h4 class = "t1">Introduction to particle physics</h4>
-                </div>
-                <div class = cool>
-                    <br>
-                    <h4 class="subtitle3">What is the vacuum made of?</h4>
-                    <br>
-                    <p class = cool-1>
-                        A way to define the vacuum is achived by looking at it like Dirac did. He introduced the "Dirac sea", which explains the phenomenon of antimatter.
-                        In this model, all the negative-energy states of electrons are considered to be filled in a "sea" — and when one of these states is empty (a "hole"), it behaves like a particle with positive charge: a positron (the electron's antiparticle).
-                        It´s an early idea from quantum field theory — not used in modern QFT calculations anymore, but still a very cool and historically important concept.  
-                    <br>
-                    <br>
-                        So, according to the idea of the Dirac sea, the vacuum isn't truly empty — it's filled with negative-energy states occupied by electrons. If enough energy is pumped into the vacuum, especially beyond a certain critical field strength known as the Schwinger limit, something interesting happens:
-                        The energy is high enough to "pull" an electron out of this sea, leaving behind a hole — which we observe as a positron. This is how electron-positron pairs can be created from the vacuum.
-                    
-                        If you continue to increase the energy density beyond that, eventually it becomes possible to create even heavier particle-antiparticle pairs — like myons, tau particles, or even hadrons — depending on how much energy you inject.
-                        In this view, the vacuum behaves like a medium full of potential particles, and extreme energy can lift them out, making them real, observable particles.
-                    <br>
-                    <br>
-                        I talked about this and other phenomenons at the 38C3 in Hamburg. If you want to know more about it, you can watch the video below:
-                    </p>
-                </div>
-                <div class="video-container">
-                    <iframe 
-                      src=https://www.youtube.com/embed/KEXabgqsrZc
-                      title="Introduction to particle physics"
-                      frameborder="0" 
-                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
-                    </iframe>
-                  </div>
-                <div>
-                    <p class="cool-2">
-                    <br>
-                    When I held this talk in Hamburg, I was only beginning to grasp the beauty of this theory. Since then I´ve been working on lecture notes that also explain the mathematical concepts behind those ideas. I´ll upload the notes as soon as I´m done. Stay tuned!
-                    </p>
-                    <br>
-                </div>
-            </section>
-            <section class ="Contact", id="contact">
-            <h4 class="contact-title">Contact me</h4>
-                <div>
-                    <ul class="contact-info-list">
-                        <li class="contact-info">
-                            <i class ="fa-regular fa-envelope"></i>
-                            <p>rosa.adamerr@icloud.com</p>
-                            <br>
-                        </li>
-                    </ul>
-                </div>
-                </div>
-            </section>
-
-        </main>
-
-    </body> 
 </html>
