--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta name="viewport" content="with = device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Miniver&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap');
+    </style>
     <title>particlephysics.eu</title>
 </head>
 
@@ -22,10 +25,6 @@
                 </li>
                 <li class="nav-item">
                     <a href="hagoromo.html" class="nav-link"> Hagoromo</a>
-                </li>
-                <li class="nav-item">
-                    <a href="pictures2.html" class="nav-link"> Pictures</a>
-                </li>
                 <li class="nav-item">
                     <a href="#contact" class="nav-link"> Contact</a>
                 </li>
