--- a/projects.html
+++ b/projects.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta name="viewport" content="with = device-width, initial-scale=1.0">
-    	<link rel="stylesheet" href="style.css">
-	</head>
-	<body>
-		<div class="headingprojects">
-			<h1 class ="headingprojects1">
-				Projects I am working on
-			</h1>
-		</div>
-			<p class ="headingprojects2">
-			I am in the process of building a spark chamber, writing lecture notes on my talk about particle physics and much more fancy stuff. I will keep you updated!
-			</p>
-			<br>
-	</body>
+
+<head>
+	<meta name="viewport" content="with = device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<style>
+		@import url('https://fonts.googleapis.com/css2?family=Miniver&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap');
+	</style>
+</head>
+
+<body>
+	<div class="headingprojects">
+		<h1 class="headingprojects1">
+			Projects I am working on
+		</h1>
+	</div>
+	<p class="headingprojects2">
+		I am in the process of building a spark chamber, writing lecture notes on my talk about particle physics and
+		much more fancy stuff. I will keep you updated!
+	</p>
+	<br>
+</body>
+
 </html>
