--- a/hagoromo.html
+++ b/hagoromo.html
@@ -4,6 +4,9 @@
 <head>
 	<meta name="viewport" content="with = device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
+	<style>
+		@import url('https://fonts.googleapis.com/css2?family=Miniver&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap');
+	</style>
 </head>
 
 <body>
