--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <h4 class="subtitle2">Hi there!</h4>
                 <br>
                 <!-- <br> -->
-                <img src="profile.pic.überar-1.jpeg" class="profile-pic">
+                <img src="self.jpg" class="profile-pic">
                 <p>I am Rosa Posch, a physics and mathematics student at TU Graz with a strong interest in particle
                     physics and mathematical physics. My goal is to one day work in one of these fields and contribute
                     to a deeper understanding of how everything works.</p>
