--- a/talks.html
+++ b/talks.html
@@ -24,13 +24,18 @@
 			• "Introduction to particle physics" - 38C3 Hamburg
 			<br>
 			<br>
-			I'll explain the fundamentals of the Standard Model of particle physics, provide insights into experiments
-			like the Large Hadron Collider (LHC), and demonstrate the role that particles like the Higgs boson and
-			neutrinos play. The focus is on making particle physics understandable and accessible—no prior knowledge
-			required, but plenty of room for questions.
-			This talk is aimed at anyone who wants to learn more about the basic building blocks of matter and the work
-			of modern physicists. Whether you're at school, university, or simply interested in science—you've come to
-			the right place!
+			<p>
+				I'll explain the fundamentals of the Standard Model of particle physics, provide insights into
+				experiments
+				like the Large Hadron Collider (LHC), and demonstrate the role that particles like the Higgs boson and
+				neutrinos play. The focus is on making particle physics understandable and accessible—no prior knowledge
+				required, but plenty of room for questions.
+				This talk is aimed at anyone who wants to learn more about the basic building blocks of matter and the
+				work
+				of modern physicists. Whether you're at school, university, or simply interested in science—you've come
+				to
+				the right place!
+			</p>
 			<br>
 		</ul>
 		</p>
