--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <ul class="contact-info-list">
                     <li class="contact-info">
                         <i class="fa-regular fa-envelope"></i>
-                        <p>rosa.adamerr@icloud.com</p>
+                        <p>rosa@particlephysics.eu</p>
                         <!-- <br> -->
                     </li>
                 </ul>
