--- a/hagoromo.html
+++ b/hagoromo.html
@@ -7,6 +7,26 @@
 	<style>
 		@import url('https://fonts.googleapis.com/css2?family=Miniver&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap');
 	</style>
+	<header>
+		<nav class="navbar">
+			<ul class="nav-menu">
+				<li class="nav-item">
+					<a href="index.html" class="nav-link"> Home</a>
+				</li>
+				<li class="nav-item">
+					<a href="talks.html" class="nav-link"> Talks</a>
+				</li>
+				<li class="nav-item">
+					<a href="projects.html" class="nav-link"> Projects</a>
+				</li>
+				<li class="nav-item">
+					<a href="hagoromo.html" class="nav-link"> Hagoromo</a>
+				<li class="nav-item">
+					<a href="index.html#contact" class="nav-link"> Contact</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
 </head>
 
 <body>
