--- a/projects.html
+++ b/projects.html
@@ -36,8 +36,11 @@
 		</h1>
 	</div>
 	<p class="headingprojects2">
-		I am in the process of building a spark chamber, writing lecture notes on my talk about particle physics and
-		much more fancy stuff. I will keep you updated!
+		This summer I aim to do a lot of particle physics. I will be able to visit DESY in august and learn much more
+		about my favorite subject. In particular, my goal this summer is to describe as many principles of particle
+		physics by just using the methods of experimental physics 1 and 2. By doing this I hope to deepen my
+		understanding of the subject and provide a better insight to why it is useful to introduce and work with quantum
+		mechanics.
 	</p>
 	<br>
 </body>
