--- a/projects.html
+++ b/projects.html
@@ -29,11 +29,11 @@
 	</header>
 </head>
 
-<body>
-	<div class="headingprojects">
-		<h1 class="headingprojects1">
+<body class="headingprojects">
+	<div class=preheadingprojects>
+		<p class="headingprojects1">
 			Projects I am working on
-		</h1>
+		</p>
 	</div>
 	<p class="headingprojects2">
 		This summer I aim to do a lot of particle physics. I will be able to visit DESY in august and learn much more
